Update layout styling using static values

--- a/public/css/less/partials/colors.less
+++ b/public/css/less/partials/colors.less
@@ -1,6 +1,6 @@
 @menu-bg: #e5e5e5;
 @menu-text: #c80030;
-@menu-text-dark: #313532;
+@menu-text-dark: lighten(#313532, 10%);
 
 @search-bg: #c82e53;
 @search-text: #e7dbd9;
