--- a/public/css/less/partials/main.less
+++ b/public/css/less/partials/main.less
@@ -2,9 +2,59 @@
   position: relative;
   height: 100%;
   width: 100%;
+  padding: 5% 15%;
 
   background-color: @main-bg;
-  color: @main-text;
 
   overflow-y: auto;
+
+  .prev-arrow, .next-arrow {
+    position: absolute;
+    width: 10%;
+    top: 40%;
+    height: 50%;
+    color: @main-text;
+
+    .fa {
+      width: 100%;
+      font-size: 100px;
+      text-align: center;
+      opacity: .5;
+
+      &:hover {
+        opacity: 1;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .prev-arrow {
+    left: 0;
+  }
+
+  .next-arrow {
+    right: 0;
+  }
+
+  .maxim {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    max-width: 700px;
+    margin: 0 auto;
+    color: @main-text;
+
+    .maxim-numero {
+      color: @main-text-dark;
+      font-size: 1.6em;
+    }
+
+    .maxim-title {
+      font-size: 2.4em;
+    }
+
+    .maxim-body {
+      font-size: 1.2em;
+    }
+  }
 }
