--- a/public/css/less/partials/menu.less
+++ b/public/css/less/partials/menu.less
@@ -7,4 +7,52 @@
 
   background-color: @menu-bg;
   color: @menu-text;
+
+  box-shadow: 0px 2px 5px #666;
+  z-index: 1;
+
+  .title {
+    position: absolute;
+    top: 10px;
+    left: 3%;
+    font-size: 16px;
+  }
+
+  .search {
+    position: relative;
+    display: block;
+    width: 30%;
+    height: 34px;
+    margin: 8px auto;
+
+    .search-input {
+      width: 100%;
+      height: 100%;
+      padding: 5px 36px 5px 12px;
+    }
+
+    .search-icon {
+      position: absolute;
+      right: 12px;
+      top: 3px;
+      font-size: 24px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+
+  .menu-icon {
+    position: absolute;
+    top: 10px;
+    right: 3%;
+    font-size: 32px;
+    color: @menu-text-dark;
+
+    &:hover {
+      cursor: pointer;  
+      color: @menu-text;
+    }
+  }
 }
