--- a/public/css/less/partials/menu.less
+++ b/public/css/less/partials/menu.less
@@ -24,11 +24,19 @@
     width: 30%;
     height: 34px;
     margin: 8px auto;
+    color: @search-text;
 
     .search-input {
       width: 100%;
       height: 100%;
       padding: 5px 36px 5px 12px;
+      
+      background-color: @search-bg;
+      color: @search-text;
+
+      border: none;
+      border-radius: 20px;
+      outline: none;
     }
 
     .search-icon {
