Add 'Champagne & Limousines' font

--- a/public/css/less/app.less
+++ b/public/css/less/app.less
@@ -1,4 +1,5 @@
 @import "partials/colors";
+@import "partials/fonts";
 @import "partials/globals";
 
 /* apply a natural box layout model to all elements */
@@ -12,6 +13,7 @@ html, body {
   width: 100%;
   height: 100%;
   margin: 0;
+  font-family: "champagne&limousines", Georgia, serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
