Link .title to index route '/'

--- a/views/app.jade
+++ b/views/app.jade
@@ -17,7 +17,8 @@ html(ng-app='WorldlyWisdom')
     #container(ng-controller="AppCtrl")
       #menu(ng-controller="MenuCtrl")
         .title
-          h2 The Art of Worldly Wisdom
+          h2
+            a(href="/") The Art of Worldly Wisdom
 
         .search
           input.search-input
