--- a/public/css/less/partials/menu.less
+++ b/public/css/less/partials/menu.less
@@ -16,6 +16,11 @@
     top: 10px;
     left: 3%;
     font-size: 16px;
+
+    a {
+      color: @menu-text;
+      text-decoration: none;
+    }
   }
 
   .search {
