--- a/views/app.jade
+++ b/views/app.jade
@@ -43,6 +43,7 @@ html(ng-app='WorldlyWisdom')
 
     //- App Specific
     script(src='/js/app.js')
+    script(src='/js/services/Maxim.js')
     script(src='/js/controllers/AppCtrl.js')
     script(src='/js/controllers/MenuCtrl.js')
     script(src='/js/controllers/MainCtrl.js')
