Update Maxim View to be more dynamic

--- a/views/maxim.jade
+++ b/views/maxim.jade
@@ -1,19 +1,5 @@
-h2.maxim-numero 155
+h2.maxim-numero {{ numero }}
 
-h1.maxim-title The Art Of Mastering Your Passions
+h1.maxim-title {{ title }}
 
-p.maxim-body.
-  If possible, oppose the vulgar advances of passion with prudent 
-  reflection. This is not difficult for a truly prudent person. 
-  The first step toward mastering a passion is to acknowledge that
-  you are in a passion. By this means you begin the conflict with
-  command over your temper, for one has to regulate one's passion
-  to the exact point that is necessary and no further. You should
-  know how and when best to come to a stop − and is it is most
-  difficult to halt while running double-time. It is a great proof
-  of wisdom to remain clear-sighted during episodes of rage. Every
-  excess of passion is a digression from rational conduct. But by
-  this masterful policy, reason will never be transgressed, nor pass
-  the bounds of its own moral wisdom. To keep control of passion one
-  must hold firm the reins of attention; he who can do so will be the
-  first person "wise on horseback", and probably the last.
+p.maxim-body {{ body }}
