--- a/public/css/less/partials/main.less
+++ b/public/css/less/partials/main.less
@@ -7,6 +7,7 @@
   background-color: @main-bg;
 
   overflow-y: auto;
+  overflow-x: hidden;
 
   .prev-arrow, .next-arrow {
     position: absolute;
@@ -38,7 +39,6 @@
 
   .maxim {
     position: relative;
-    height: 100%;
     width: 100%;
     max-width: 700px;
     margin: 0 auto;
