--- a/views/app.jade
+++ b/views/app.jade
@@ -31,7 +31,7 @@ html(ng-app='WorldlyWisdom')
         .prev-arrow
           i.fa.fa-chevron-left(ng-click="prevMaxim()")
 
-        .maxim(ng-view)
+        .maxim(ng-class="{prev: prev, next: next}" ng-view)
 
         .next-arrow
           i.fa.fa-chevron-right(ng-click="nextMaxim()")
@@ -39,6 +39,7 @@ html(ng-app='WorldlyWisdom')
     //- Libraries
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js')
     script(src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js')
+    script(src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-animate.min.js')
     script(src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-touch.min.js')
 
     //- App Specific
