--- a/public/css/less/partials/menu.less
+++ b/public/css/less/partials/menu.less
@@ -86,8 +86,7 @@
 
     .persistent {
       height: @menu-height;
-      border-bottom: 1px solid #888;
-      box-shadow: none;
+      box-shadow: 0px 1px 3px #888;
     }
 
     .collapsible {
