--- a/public/css/less/partials/menu.less
+++ b/public/css/less/partials/menu.less
@@ -28,38 +28,38 @@
       }
     }
 
-    .search {
-      position: relative;
-      display: block;
-      width: 30%;
-      height: 34px;
-      margin: 8px auto;
-      color: @search-text;
+    // .search {
+    //   position: relative;
+    //   display: block;
+    //   width: 30%;
+    //   height: 34px;
+    //   margin: 8px auto;
+    //   color: @search-text;
 
-      .search-input {
-        width: 100%;
-        height: 100%;
-        padding: 5px 36px 5px 12px;
+    //   .search-input {
+    //     width: 100%;
+    //     height: 100%;
+    //     padding: 5px 36px 5px 12px;
         
-        background-color: @search-bg;
-        color: @search-text;
+    //     background-color: @search-bg;
+    //     color: @search-text;
 
-        border: none;
-        border-radius: 20px;
-        outline: none;
-      }
+    //     border: none;
+    //     border-radius: 20px;
+    //     outline: none;
+    //   }
 
-      .search-icon {
-        position: absolute;
-        right: 12px;
-        top: 3px;
-        font-size: 24px;
+    //   .search-icon {
+    //     position: absolute;
+    //     right: 12px;
+    //     top: 3px;
+    //     font-size: 24px;
 
-        &:hover {
-          cursor: pointer;
-        }
-      }
-    }
+    //     &:hover {
+    //       cursor: pointer;
+    //     }
+    //   }
+    // }
 
     .menu-icon {
       position: absolute;
