Add swipe actions
Bind the swipe-left and swipe-right events to the nextMaxim() and
prevMaxim() actions.

--- a/views/app.jade
+++ b/views/app.jade
@@ -27,7 +27,11 @@ html(ng-app='WorldlyWisdom')
           h3(ng-repeat="title in titles") 
             span(ng-click="loadMaxim($index)") {{$index}}. {{ title }}
 
-      #main(ng-controller="MainCtrl")
+      #main(ng-controller="MainCtrl",
+        ng-swipe-left="nextMaxim()",
+        ng-swipe-right="prevMaxim()"
+
+        )
         .prev-arrow
           i.fa.fa-chevron-left(ng-click="prevMaxim()")
 
