Add a default class of .next on .maxim
This is to ensure that the transition are at least decent before the
.prev-arrow and .next-arrow icons have been clicked. There is some bug in
the ngAnimate module that doesn't quite apply the ng-enter animations for
classes that are not added with ngClass.

--- a/views/app.jade
+++ b/views/app.jade
@@ -35,7 +35,7 @@ html(ng-app='WorldlyWisdom')
         .prev-arrow
           i.fa.fa-chevron-left(ng-click="prevMaxim()")
 
-        .maxim(ng-class="{prev: prev, next: next}" ng-view)
+        .next.maxim(ng-class="{prev: prev, next: next}" ng-view)
 
         .next-arrow
           i.fa.fa-chevron-right(ng-click="nextMaxim()")
