--- a/views/app.jade
+++ b/views/app.jade
@@ -47,9 +47,4 @@ html(ng-app='WorldlyWisdom')
     script(src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-touch.min.js')
 
     //- App Specific
-    script(src='/js/app.js')
-    script(src='/js/services/Maxim.js')
-    script(src='/js/controllers/MenuCtrl.js')
-    script(src='/js/controllers/MainCtrl.js')
-    script(src='/js/controllers/TitlePageCtrl.js')
-    script(src='/js/controllers/MaximCtrl.js')
+    script(src='/js/app.min.js')
