--- a/views/app.jade
+++ b/views/app.jade
@@ -40,6 +40,16 @@ html(ng-app='WorldlyWisdom')
         .next-arrow
           i.fa.fa-chevron-right(ng-click="nextMaxim()")
 
+        #footer
+          .public-domain
+            span All content on this site is in the 
+            a(href='http://en.wikipedia.org/wiki/Public_domain') Public Domain.
+
+          .github
+            span Fork me on 
+            a(href='https://github.com/sethbonnie/worldly_wisdom') 
+              i.fa.fa-github-alt
+
     //- Libraries
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js')
     script(src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js')
